# SimplePhotoTransfer

./: CMakeLists.txt  README.md
src/: ConfigReader.cpp  ConfigReader.h  SimplePhotoTransfer.cpp  SimplePhotoTransfer.h  SimplePhotoTransfer.ui  main.cpp
